--- a/src/assets/scss/custom.scss
+++ b/src/assets/scss/custom.scss
@@ -1,6 +1,6 @@
 // 1. Importações do Bootstrap (devem vir primeiro)
 @use "bootstrap/scss/bootstrap" with (
-  $primary: #2c3e50,
+  $primary: #0504AA,
   $secondary: #e74c3c,
   $success: #27ae60,
   $info: #3498db,
