develop melhoria mapa

--- a/src/assets/css/styles.css
+++ b/src/assets/css/styles.css
@@ -2,3 +2,8 @@ body {
     margin: 0;
     font-family: Arial, sans-serif;
   }
+.app-content {
+  flex: 1;
+  display: flex;
+  flex-direction: column;
+}
